# Megatron-Energon

./: .coveragerc  .mypy-baseline.txt  BUILD_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  try_cuda_workers.py
.cursor/rules/: python-uv-unittest.mdc
.github/actions/setupjust/: index.js
.github/workflows/: black.yml  documentation.yml  isort.yml  license_headers.yml  release.yml  ruff.yml  testnoext.yml  tests.yml  typecheck.yml
.github/workflows/actions/: setupjust.yml
.github/workflows/actions/setupjust/: action.yml
docs/: README.md
docs/source/: add_columns.md  advanced_dataformat.md  basics_dataconcepts.md  conf.py  data_on_disk.md  grouping.md  index.md  introduction.md  joining_datasets.md  packing.md  packing_slicing_batching.md  repro_scaling.md  simple_use.md  task_encoders.md
docs/source/_static/: site.webmanifest
docs/source/_templates/: favicon.html  layout.html
docs/source/advanced/: advanced_dataformat.md  crude_datasets.md  custom_blending.md  custom_sample_loader.md  data_prep_api.md  epochized_blending.md  error_handling.md  grouping.md  joining_datasets.md  packing.md  parallelism.md  remote_dataset.md  repro_scaling.md  save_restore.md  subsets.md
docs/source/api/: cli.md  modules.md  modules_data.md
docs/source/basic/: basics_flow.md  data_decoding.md  data_prep.md  glossary.md  metadataset.md  metadatasets.md  quickstart.md  save_restore.md  task_encoder.md  task_encoders.md
docs/source/images/: data_flow.drawio  joining.drawio
docs/source/internals/: code_structure.md  concepts.md  contrib_guidelines.md  type_checking.md
docs/source/internals/images/: dataloader-basic-flow.drawio  dataloader-instances.drawio
docs/source/intro/: installation.md  introduction.md
scripts/: bench_sqlite_index_writer.py  bench_webdataset_prepare.py  create_dummy_webdataset.py  license_headers.py
src/megatron/energon/: __init__.py  bracecollapse.py  bracecollapse_numba.py  broadcasting.py  dataclass_slots.py  dataloader.py  dataset_config.py  deprecation.py  edataclass.py  errors.py  eyaml.py  fork_hook.py  loader.py  local_copy.py  logical_worker.py  module_loader.py  retry_stream.py  rng.py  sample_utils.py  savable.py  savable_loader.py  source_info.py  state.py  threaded_loader.py  tracing.py  typed_converter.py  watchdog.py  weights.py  worker.py
src/megatron/energon/av/: __init__.py  av_data.py  av_decoder.py  av_init.py  av_reader.py  decode_av_frames.py  utils.py  video_data.py
src/megatron/energon/av/fastseek/: __init__.py  fastseek.py  keyframeinfo.py  reader.py
src/megatron/energon/cache/: __init__.py  base.py  file_cache_pool.py  file_store.py  no_cache.py
src/megatron/energon/cli/: __init__.py  main.py
src/megatron/energon/dataloader/: __init__.py  dataloader.py  future.py  pin_memory.py
src/megatron/energon/dataloader/asynchronous/: __init__.py  base.py  fork.py  thread.py
src/megatron/energon/dataloader/workers/: __init__.py  async_worker.py  base_worker.py  fork_worker.py  thread_worker.py
src/megatron/energon/epathlib/: __init__.py  epath.py  rclone_config.py
src/megatron/energon/evaluate/: eval.ipynb  run_ds.py
src/megatron/energon/flavors/: __init__.py  base_dataset.py  base_webdataset.py  captioning.py  crude.py  crude_jsonl_dataset.py  general_qa.py  image.py  image_classification.py  interleaved.py  multichoice_vqa.py  ocr.py  similarity_interleaved.py  text.py  trace.py  vid_qa.py  vqa.py  vqa_and_ocr.py
src/megatron/energon/flavors/binidx/: README.md  __init__.py  binidx_dataset.py  binidx_reader.py
src/megatron/energon/flavors/jsonl/: __init__.py  crude_jsonl_dataset.py  ijsonl.py  (+2 more)
src/megatron/energon/loader/: dataloader.py  future.py  pin_memory.py
src/megatron/energon/logging/: __init__.py  setup.py
src/megatron/energon/media/: __init__.py  extractor.py  filesystem_prepare.py  metadata.py
src/megatron/energon/metadataset/: __init__.py  dataset_loader.py  join_dataset_loader.py  loader.py  loader_interface.py  metadataset.py  metadataset_v2.py
src/megatron/energon/sync_end/: __init__.py  redistribute.py  stop_first_end.py
src/megatron/energon/task_encoder/: __init__.py  base.py  cooking.py  loader.py
src/megatron/energon/tools/: __init__.py  analyze_debug.py  analyze_debug_merge.py  benchmark.py  benchmark_all.py  checkpoint.py  info.py  lint.py  mount.py  prepare.py  prepare_media.py  preview.py
src/megatron/energon/transforms/: __init__.py  common.py  custom.py  mappers.py  merge.py
src/megatron/energon/wrappers/: __init__.py  _log_exception.py  base.py  batch_dataset.py  blend_dataset.py  buffer.py  cache_pool_dataset.py  concat_dataset.py  epochize_dataset.py  file_store_init_wrapper.py  filter_dataset.py  gc_dataset.py  group_batch_dataset.py  iter_map_dataset.py  limit_dataset.py  log_sample_dataset.py  map_dataset.py  mix_batch_dataset.py  packing_dataset.py  repeat_dataset.py  shuffle_buffer_dataset.py  skip.py  slice_batch_dataset.py  stride_dataset.py  task_encoder_state_dataset.py  watchdog_dataset.py
tests/: epath_s3_emulator.py  test_av_decoder.py  test_binidx_dataset.py  test_crudedataset.py  test_dataloader.py  test_dataset.py  test_dataset_det.py  test_decode_av_frames.py  test_decode_video_frames.py  test_epathlib.py  test_file_cache_pool.py  test_gpu_image.py  test_jsonl_dataset.py  test_logical_workers.py  test_media_pipeline.py  test_metadataset.py  test_metadataset_fewsamp.py  test_metadataset_v2.py  test_parquet_dataset.py  test_sample_utils.py  test_sync.py  test_transforms.py  test_typed_converter.py  test_weakref.py  test_webdataset_indexing.py  test_webdataset_prepare.py  test_weights.py
tests/data/: sync_test.avi  sync_test.mkv  test_audio.flac  test_image.jp2
tests/s3_emulator/: __init__.py  auth.py  handler.py  main.py  server.py  state.py  test.py
(+63 files in other folders)
