[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "megatron-energon"
dynamic = ["version"]
authors = [
  { name="Lukas Vögtle", email="lvoegtle@nvidia.com" },
  { name="Philipp Fischer", email="pfischer@nvidia.com" },
]
description = "Megatron's multi-modal data loader"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "braceexpand",
  "click",
  "filetype>=1.0.0",
  "mfusepy",
  "multi-storage-client>=0.40.0",
  "numpy",
  "pillow>=10.0.1",  # WEBP vulnerability fixed starting from 10.0.1
  "pyyaml",
  "rapidyaml>=0.10.0",
  "s3fs",
  "torch",
  "tqdm",
  "webdataset",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "sphinxcontrib-napoleon",
  "sphinx",
  "myst-parser",
  "soundfile",
  "sphinx-rtd-theme",
  "sphinx-click",
  # Static type checking (see docs/source/internals/type_checking.md)
  "mypy>=1.8",
  "mypy-baseline>=0.7",
  "types-PyYAML",
  "types-tqdm",
]
transforms = [
  "torchvision",  # Needed for megatron.energon.transforms
]

# Storage services for MSC
s3 = [
  "multi-storage-client[boto3]",
]
aistore = [
  "multi-storage-client[aistore]",
]
azure-storage-blob = [
  "multi-storage-client[azure-storage-blob]",
]
google-cloud-storage = [
  "multi-storage-client[google-cloud-storage]",
]
oci = [
  "multi-storage-client[oci]",
]
huggingface = [
  "multi-storage-client[huggingface]",
]

# Dependencies for video decoding
av_decode = [
  # needed for efficient audio and video file decoding
  "av>=17.0.0",
]
tar_patcher = [
  "numba",
]

all = [
  "megatron-energon[av_decode,aistore,azure-storage-blob,dev,google-cloud-storage,huggingface,oci,s3,tar_patcher,transforms]",
]

[project.urls]
Homepage = "https://github.com/NVIDIA/Megatron-Energon"

[tool.hatch.build.targets.wheel]
packages = ["src/megatron"]

[tool.hatch.build.targets.sdist]
packages = ["src/megatron"]

[project.scripts]
energon = "megatron.energon.cli.main:main"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E741", "E731"]

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["**/*.py", "**/*.pyi"]
exclude = [
  ".idea",
  "docs",
]

# Static type checking. Strategy & contributor guide:
# docs/source/internals/type_checking.md
# CI gates on *new* errors only, via a committed `.mypy-baseline.txt` ratchet.
[tool.mypy]
python_version = "3.10"
files = ["src/megatron/energon"]
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
# Third-party stubs are adopted incrementally (see "Stub policy" in the docs);
# until then, missing imports are treated as `Any`.
ignore_missing_imports = true
# Pragmatic floor: catch real bugs without requiring every def to be annotated yet.
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_error_codes = true

# Ratchet config for `mypy-baseline`. NOTE: `allow_unsynced` is intentionally left
# at its default (false) so the baseline can only shrink — see the docs. Do not enable it.
[tool.mypy-baseline]
baseline_path = ".mypy-baseline.txt"
sort_baseline = true
